k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ticketing
  labels:
    app: ticketing
    component: backend
spec:
  selector:
    app: ticketing
    component: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
